      are missing security hardening features. Thanks to Petter
      Reinholdtsen for the report.  (Closes: #837548)
  * checks/python.{pm,desc}:
    + [CL] Warn about Python 2.x packages using ${python3:Depends} and
      Python 3.x packages using ${python:Depends}. Thanks to Mattia
      Rizzolo for the idea.  (Closes: #884676)

  * data/debhelper/compat-level:
    + [MR] Bump the experimental debhelper compat level to 12.
      (Closes: #884678)
    + [CL] Bump the recommended debehlper compat level to 11, emitting a
      pedantic warning when using lower level.  (Closes: #884699)
  * data/files/js-libraries:
    + [CL] Detect embedded jQuery libraries with version number in their
      filenames (eg. jquery-1.10.2.min.js).  (Closes: #833613)
    + [CL] Also emit embedded-javascript-library for Twitter Bootstrap and
      "mustache".

  * t/tests/files-multiarch-foreign-files:
    + [CL] Don't hardcode architecture triplet to fix FTBFS on non-amd64
      architectures.  (Closes: #884683)

 -- Chris Lamb <lamby@debian.org>  Mon, 18 Dec 2017 10:37:45 +0000

lintian (2.5.65) unstable; urgency=medium

  * t/tests/files-pkgconfig:
    + [CL] Update tests to reflect change in Multi-Arch foreign detection.

 -- Chris Lamb <lamby@debian.org>  Mon, 18 Dec 2017 10:04:30 +0000

lintian (2.5.64) unstable; urgency=medium

  * checks/files.pm:
    + [CL] Apply patch from Sven Joachim to prevent false-positives
      multiarch-foreign-static-library for non-multiarch packages.
      (Closes: #884655)

  * reporting/templates/maintainer.tmpl:
    + [CL] Don't link full report entries to themselves.  (Closes: #884572)
    + [CL] Link to the package's short report entry from the "full" version
      if it isn't empty.

 -- Chris Lamb <lamby@debian.org>  Mon, 18 Dec 2017 09:31:48 +0000

lintian (2.5.63) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - development-package-ships-elf-binary-in-path
      - excessive-priority-for-library-package